# clara

./: .gitignore  README.md  go.mod  go.sum
backend/: Cargo.toml  config.example.toml
backend/src/: lib.rs  main.rs
backend/src/api/: mod.rs  state.rs  ws.rs
backend/src/api/routes/: accounts.rs  auto_trade.rs  health.rs  history.rs  markets.rs  mod.rs  orders.rs
backend/src/clients/: kalshi.rs  mod.rs  polymarket.rs
backend/src/config/: mod.rs
backend/src/domain/: market.rs  mod.rs  opportunity.rs  order.rs  types.rs
backend/src/services/: arbitrage.rs  calculator.rs  matcher.rs  mod.rs
backend/src/storage/: mod.rs  sqlite.rs
backend/src/utils/: decimal.rs  mod.rs  text.rs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/components/Accounts/: BalanceCard.tsx  index.tsx
frontend/src/components/Dashboard/: OpportunityCard.tsx  OpportunityList.tsx  index.tsx
frontend/src/components/History/: HistoryTable.tsx  index.tsx
frontend/src/components/Orders/: OrderForm.tsx  OrderList.tsx  index.tsx
frontend/src/components/common/: Button.tsx  Card.tsx  Input.tsx  Spinner.tsx
frontend/src/hooks/: useApi.ts  useWebSocket.ts
frontend/src/types/: index.ts
frontend/src/utils/: constants.ts  format.ts
internal/infra/: logger.go
pkg/account/: types.go
pkg/errors/: errors.go
pkg/exchange/: client.go
pkg/market/: types.go
pkg/order/: types.go
pkg/stream/: stream.go
